fix added full name of image and fix long text overflow

--- a/src/components/Image.module.css
+++ b/src/components/Image.module.css
@@ -30,15 +30,10 @@
 
 .imageText {
   height: 5rem;
-  /*position: absolute;*/
-  /*bottom: 0;*/
-  /*right: 0;*/
-  /*left: 0;*/
-
   background-color: rgba(255, 255, 255, 0.9);
   color: rgb(10, 10, 10);
   padding-left: 10px;
-  padding-right: 3px;
+  padding-right: 5px;
   padding-top: 10px;
   font-size: 0.7rem;
   line-height: 1px;
@@ -46,8 +41,12 @@
   grid-auto-flow: row;
   justify-items: left;
   row-gap: 1px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
 }
+
 
 
 
